--- a/stories/index.html
+++ b/stories/index.html
@@ -350,7 +350,7 @@
       <td>0253</td>
       <td><a href="http://africanstorybook.org/stories/my-picture-book-0">My Picture Book</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#eo0253">eo</a>, <a href="#es0253">es</a>, <a href="#fa0253">fa</a>, <a href="#hi0253">hi</a>, <a href="#ja0253">ja</a>, <a href="#jam0253">jam</a>, <a href="#no0253">no</a>, <a href="#ru0253">ru</a>, <a href="#tl0253">tl</a>, <a href="#yue0253">yue</a>, <a href="#zh0253">zh</a></td>
+      <td><a href="#eo0253">eo</a>, <a href="#es0253">es</a>, <a href="#fa0253">fa</a>, <a href="#hi0253">hi</a>, <a href="#ja0253">ja</a>, <a href="#jam0253">jam</a>, <a href="#ms0253">ms</a>, <a href="#no0253">no</a>, <a href="#ru0253">ru</a>, <a href="#tl0253">tl</a>, <a href="#yue0253">yue</a>, <a href="#zh0253">zh</a></td>
     </tr>
     <tr>
       <td>0264</td>
@@ -448,6 +448,8 @@
 <li class="toc"><a href="#jamaican-creole">Jamaican Creole [Patwa]</a></li><br>
 
 <li class="toc"><a href="#japanese">Japanese [日本語]</a></li><br>
+
+<li class="toc"><a href="#malay">Malay [Bahasa Melayu]</a></li><br>
 
 <li class="toc"><a href="#nepali">Nepali [नेपाली]</a></li><br>
 
@@ -1409,6 +1411,29 @@
       <td style="text-align: center"><a href="/stories/ja/0253_私の絵本.html">HTML</a> · <a href="/stories/ja/0253_私の絵本_slides.html" target="_blank">Slideshow</a></td>
       <td><ul><li><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="https://github.com/global-asp/global-asp/releases/download/v1.1/ja.zip">Github release</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/xh4sspixbmtuc66/ja.zip">Dropbox</a></li><li><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsTldiajhTdl9yUDA/view?usp=sharing">Google Drive</a></li></ul></td>
       <td><a name="ja0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+  </tbody>
+</table>
+
+   </ul>
+  <h3><a name='malay'>Malay [Bahasa Melayu]</a></h3>
+   <ul><table>
+  <thead>
+    <tr>
+      <th>Story #</th>
+      <th>Story title</th>
+      <th style="text-align: center">View</th>
+      <th class="dl">Download</th>
+      <th class="lic">License</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>0253</td>
+      <td>Buku Gambar Saya</td>
+      <td style="text-align: center"><a href="/stories/ms/0253_buku-gambar-saya.html">HTML</a> · <a href="/stories/ms/0253_buku-gambar-saya_slides.html" target="_blank">Slideshow</a></td>
+      <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="">Github release</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="">Google Drive</a></td>
+      <td><a name="ms0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
