--- a/stories/no/0001_en-veldig-høy-mann.html
+++ b/stories/no/0001_en-veldig-høy-mann.html
@@ -70,7 +70,7 @@ Cornelius Gulere<br>norsk</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/05.jpg" /></p>
 
-<p>Sykkelen hans var for kort.</p>
+<p>Sykkelen hans var for lav.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
