update language anchor and aeb

--- a/stories/index.html
+++ b/stories/index.html
@@ -350,7 +350,7 @@
       <td>0253</td>
       <td><a href="http://africanstorybook.org/stories/my-picture-book-0">My Picture Book</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#eo0253">eo</a>, <a href="#es0253">es</a>, <a href="#fa0253">fa</a>, <a href="#hi0253">hi</a>, <a href="#ja0253">ja</a>, <a href="#jam0253">jam</a>, <a href="#ms0253">ms</a>, <a href="#no0253">no</a>, <a href="#ru0253">ru</a>, <a href="#tl0253">tl</a>, <a href="#yue0253">yue</a>, <a href="#zh0253">zh</a></td>
+      <td><a href="#aeb0253">aeb</a>, <a href="#eo0253">eo</a>, <a href="#es0253">es</a>, <a href="#fa0253">fa</a>, <a href="#hi0253">hi</a>, <a href="#ja0253">ja</a>, <a href="#jam0253">jam</a>, <a href="#ms0253">ms</a>, <a href="#no0253">no</a>, <a href="#ru0253">ru</a>, <a href="#tl0253">tl</a>, <a href="#yue0253">yue</a>, <a href="#zh0253">zh</a></td>
     </tr>
     <tr>
       <td>0264</td>
@@ -430,7 +430,7 @@
 </tbody></table>
 <br>
 
-  <h2>List of translated stories by language</h2>
+  <h2 name="languages">List of translated stories by language</h2>
   
 <div class="tocbox">
 <li class="toc"><a href="#cantonese">Cantonese [粵語]</a></li><br>
@@ -466,6 +466,8 @@
 <li class="toc"><a href="#swedish">Swedish [svenska]</a></li><br>
 
 <li class="toc"><a href="#tagalog">Tagalog [Tagalog]</a></li><br>
+
+<li class="toc"><a href="#tunisian-arabic">Tunisian Arabic [Tounsi]</a></li><br>
 
 <ol>
 </ol></div>
@@ -1298,7 +1300,7 @@
   <tbody>
     <tr>
       <td>0087</td>
-      <td>मै पढ़ना चाहता हूँ</td>
+      <td>मंै पढ़ना चाहता हूँ</td>
       <td style="text-align: center"><a href="/stories/hi/0087_मै-पढ़ना-चाहता-हूँ.html">HTML</a> · <a href="/stories/hi/0087_मै-पढ़ना-चाहता-हूँ_slides.html" target="_blank">Slideshow</a></td>
       <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="">Github release</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/bnz8xajkn1v2hhh/hi.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="">Google Drive</a></td>
       <td><a name="hi0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
@@ -1968,6 +1970,29 @@
       <td style="text-align: center"><a href="/stories/tl/0253_aking-libro-ng-larawan.html">HTML</a> · <a href="/stories/tl/0253_aking-libro-ng-larawan_slides.html" target="_blank">Slideshow</a></td>
       <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="">Github release</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/lp20ixu472hga6o/tl.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/file/d/0B59ZADK9EsbsQ2ZUX082QnFEc1U/view?usp=sharing">Google Drive</a></td>
       <td><a name="tl0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+  </tbody>
+</table>
+
+   </ul>
+  <h3><a name='tunisian-arabic'>Tunisian Arabic [Tounsi]</a></h3>
+   <ul><table>
+  <thead>
+    <tr>
+      <th>Story #</th>
+      <th>Story title</th>
+      <th style="text-align: center">View</th>
+      <th class="dl">Download</th>
+      <th class="lic">License</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>0253</td>
+      <td>Ktèb it-tṡàwir mtègħi</td>
+      <td style="text-align: center"><a href="/stories/aeb/0253_ktèb-it-tṡàwir-mtègħi.html">HTML</a> · <a href="/stories/aeb/0253_ktèb-it-tṡàwir-mtègħi_slides.html" target="_blank">Slideshow</a></td>
+      <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="">Github release</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="">Google Drive</a></td>
+      <td><a name="aeb0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
