update imagebank +ms, aeb

--- a/stories/index.html
+++ b/stories/index.html
@@ -430,7 +430,7 @@
 </tbody></table>
 <br>
 
-  <h2 name="languages">List of translated stories by language</h2>
+  <h2><a name='languages'>List of translated stories by language</a></h2>
   
 <div class="tocbox">
 <li class="toc"><a href="#cantonese">Cantonese [粵語]</a></li><br>
