fix imagebank index

--- a/imagebank/index.html
+++ b/imagebank/index.html
@@ -69,6 +69,7 @@
         <option value="xog">Lusoga</option>
         <option value="mas">Maa</option>
         <option value="mhi">Ma'di</option>
+        <option value="ms">Malay</option>
         <option value="ne">Nepali</option>
         <option value="kdj">Ngakarimojong</option>
         <option value="tuv">Ng'aturkana</option>
@@ -92,6 +93,7 @@
         <option value="sv">Swedish</option>
         <option value="tl">Tagalog</option>
         <option value="ve">Tshivenda</option>
+        <option value="aeb">Tunisian Arabic</option>
         <option value="ts">Xitsonga</option>
         <option value="tsc">Xitswa</option>
         <option value="yo">Yoruba</option>
