update stories (aeb)

--- a/stories/index.html
+++ b/stories/index.html
@@ -392,7 +392,7 @@
       <td>0309</td>
       <td><a href="http://africanstorybook.org/stories/little-and-big">Little and big</a></td>
       <td><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#fa0309">fa</a>, <a href="#yue0309">yue</a>, <a href="#zh0309">zh</a></td>
+      <td><a href="#aeb0309">aeb</a>, <a href="#fa0309">fa</a>, <a href="#yue0309">yue</a>, <a href="#zh0309">zh</a></td>
     </tr>
     <tr>
       <td>0320</td>
@@ -1993,6 +1993,13 @@
       <td style="text-align: center"><a href="/stories/aeb/0253_ktèb-it-tṡàwir-mtègħi.html">HTML</a> · <a href="/stories/aeb/0253_ktèb-it-tṡàwir-mtègħi_slides.html" target="_blank">Slideshow</a></td>
       <td><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/8cf9efljcs87tjo/aeb.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/open?id=0B59ZADK9EsbsTS00c3BQaHNqblE">Google Drive</a></td>
       <td><a name="aeb0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0309</td>
+      <td>Ṡġìr w kbìr</td>
+      <td style="text-align: center"><a href="/stories/aeb/0309_ṡġìr-w-kbìr.html">HTML</a> · <a href="/stories/aeb/0309_ṡġìr-w-kbìr_slides.html" target="_blank">Slideshow</a></td>
+      <td><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/8cf9efljcs87tjo/aeb.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/open?id=0B59ZADK9EsbsTS00c3BQaHNqblE">Google Drive</a></td>
+      <td><a name="aeb0309"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
   </tbody>
 </table>
