--- a/stories/index.html
+++ b/stories/index.html
@@ -1304,7 +1304,7 @@
       <td>0253</td>
       <td>મારી ચિત્ર કિતાબ</td>
       <td style="text-align: center"><a href="/stories/gu/0253_મારી-ચિત્ર-કિતાબ-.html">HTML</a> · <a href="/stories/gu/0253_મારી-ચિત્ર-કિતાબ-_slides.html" target="_blank">Slideshow</a></td>
-      <td><img src="https://cloud.githubusercontent.com/assets/9295750/9483128/0e089e5e-4b51-11e5-98ca-6da5cef156a7.png" alt="" /> <a href="">Github release</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="">Google Drive</a></td>
+      <td><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/mkjvoww0h3zotvc/gu.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE">Google Drive</a></td>
       <td><a name="gu0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
