update imagebank +gu

--- a/imagebank/index.html
+++ b/imagebank/index.html
@@ -46,6 +46,7 @@
         <option value="de">German</option>
         <option value="ki">Gikuyu</option>
         <option value="toh">Gitonga</option>
+        <option value="gu">Gujarati</option>
         <option value="gur">Gurene</option>
         <option value="ha">Hausa</option>
         <option value="hi">Hindi</option>
