add link to imagebank

--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
         
         <p>Click <a href="https://github.com/global-asp/global-asp">here</a> to visit the main project page on github, or use the download links on the <a href="stories">stories page</a> to get all the available formats in one package.</p>
 
+        <p>Also check out our related project using storybook images from ASP:</p>
+        <div id="btn_div"><p><center><button type="button" class="small_btn" onclick="window.location = 'https://global-asp.github.io/imagebank/'">ASP Image Bank Explorer</button></center></div>
 
 </div>
 
