fix story index

--- a/stories/hi/0095_ज़ामा-बहुत-अच्छी-है.html
+++ b/stories/hi/0095_ज़ामा-बहुत-अच्छी-है.html
@@ -56,77 +56,77 @@ Michael Oguttu<br>हिन्दी</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/03.jpg" /></p>
 
-<p>मै सूरज की रोशनी को अन्दर आने देती हूँ।</p>
+<p>मैं सूरज की रोशनी को अन्दर आने देती हूँ।</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/04.jpg" /></p>
 
-<p>“तुम मेरी सुबह की तारा हो,” माँ कहती है।</p>
+<p>“तुम मेरी सुबह की तारा हो,” माँ कहती हैं।</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/05.jpg" /></p>
 
-<p>मै अपने आप नहा लेती हूँ, मुझे मदद की ज़रूरत नही है।</p>
+<p>मैं अपने आप नहा लेती हूँ, मुझे मदद की ज़रूरत नहीं है।</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/06.jpg" /></p>
 
-<p>मै ठंडे पानी और बदबुदार साबुन को सह लेती हूँ।</p>
+<p>मैं ठंडे पानी और बदबुदार साबुन को सह लेती हूँ।</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/07.jpg" /></p>
 
-<p>माँ याद दिलाती है, “दात मलना मत भूलना।” मै जवाब देती हूँ, “मै कभी नही भूलती।”</p>
+<p>माँ याद दिलाती हैं, “दात मलना मत भूलना।” मैं जवाब देती हूँ, “मैं कभी नहीं भूलती।”</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/08.jpg" /></p>
 
-<p>नहाने के बाद मै दादा और दादी को अच्छे दिन की शुभकामना देती हूँ।</p>
+<p>नहाने के बाद मैं दादा और दादी को अच्छे दिन की शुभकामना देती हूँ।</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/09.jpg" /></p>
 
-<p>फिर में कपड़े पहनती हूँ, “माँ मै अब बड़ी हो गयी हूँ,” मै कहती हूँ।</p>
+<p>फिर में कपड़े पहनती हूँ, “माँ मैं अब बड़ी हो गयी हूँ,” मैं कहती हूँ।</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/10.jpg" /></p>
 
-<p>मै अपने बटन बंद करती हूँ और फीते बाँधती हूँ।</p>
+<p>मैं अपने बटन बंद करती हूँ और फीते बाँधती हूँ।</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/11.jpg" /></p>
 
-<p>और मै अपने छोटे भाई को विद्यालय की सारी खबर देती हूँ।</p>
+<p>और मैं अपने छोटे भाई को विद्यालय की सारी ख़बर देती हूँ।</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/12.jpg" /></p>
 
-<p>मै कक्षा मै बहुत मेहनत करती हूँ।</p>
+<p>मैं कक्षा में बहुत मेहनत करती हूँ।</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/13.jpg" /></p>
 
-<p>मै हर रोज़ अच्छे काम करती हूँ। लेकिन मुझे सबसे ज़्यादा खेलना पसंद है।</p>
+<p>मैं हर रोज़ अच्छे काम करती हूँ। लेकिन मुझे सबसे ज़्यादा खेलना पसंद है।</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
