--- a/stories/hi/0095_ज़ामा-बहुत-अच्छी-है_slides.html
+++ b/stories/hi/0095_ज़ामा-बहुत-अच्छी-है_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/03.jpg" /></p>
-<p>मै सूरज की रोशनी को अन्दर आने देती हूँ।</p>
+<p>मैं सूरज की रोशनी को अन्दर आने देती हूँ।</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/04.jpg" /></p>
-<p>&quot;तुम मेरी सुबह की तारा हो,&quot; माँ कहती है।</p>
+<p>&quot;तुम मेरी सुबह की तारा हो,&quot; माँ कहती हैं।</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/05.jpg" /></p>
-<p>मै अपने आप नहा लेती हूँ, मुझे मदद की ज़रूरत नही है।</p>
+<p>मैं अपने आप नहा लेती हूँ, मुझे मदद की ज़रूरत नहीं है।</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/06.jpg" /></p>
-<p>मै ठंडे पानी और बदबुदार साबुन को सह लेती हूँ।</p>
+<p>मैं ठंडे पानी और बदबुदार साबुन को सह लेती हूँ।</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/07.jpg" /></p>
-<p>माँ याद दिलाती है, &quot;दात मलना मत भूलना।&quot; मै जवाब देती हूँ, &quot;मै कभी नही भूलती।&quot;</p>
+<p>माँ याद दिलाती हैं, &quot;दात मलना मत भूलना।&quot; मैं जवाब देती हूँ, &quot;मैं कभी नहीं भूलती।&quot;</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/08.jpg" /></p>
-<p>नहाने के बाद मै दादा और दादी को अच्छे दिन की शुभकामना देती हूँ।</p>
+<p>नहाने के बाद मैं दादा और दादी को अच्छे दिन की शुभकामना देती हूँ।</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/09.jpg" /></p>
-<p>फिर में कपड़े पहनती हूँ, &quot;माँ मै अब बड़ी हो गयी हूँ,&quot; मै कहती हूँ।</p>
+<p>फिर में कपड़े पहनती हूँ, &quot;माँ मैं अब बड़ी हो गयी हूँ,&quot; मैं कहती हूँ।</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/10.jpg" /></p>
-<p>मै अपने बटन बंद करती हूँ और फीते बाँधती हूँ।</p>
+<p>मैं अपने बटन बंद करती हूँ और फीते बाँधती हूँ।</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/11.jpg" /></p>
-<p>और मै अपने छोटे भाई को विद्यालय की सारी खबर देती हूँ।</p>
+<p>और मैं अपने छोटे भाई को विद्यालय की सारी ख़बर देती हूँ।</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/12.jpg" /></p>
-<p>मै कक्षा मै बहुत मेहनत करती हूँ।</p>
+<p>मैं कक्षा में बहुत मेहनत करती हूँ।</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/13.jpg" /></p>
-<p>मै हर रोज़ अच्छे काम करती हूँ। लेकिन मुझे सबसे ज़्यादा खेलना पसंद है।</p>
+<p>मैं हर रोज़ अच्छे काम करती हूँ। लेकिन मुझे सबसे ज़्यादा खेलना पसंद है।</p>
 <center>
 <strong>12</strong>
 </center>
