--- a/stories/index.html
+++ b/stories/index.html
@@ -946,11 +946,32 @@
       <td><a name="gu0007"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0049</td>
+      <td>મેઘધનુષ્ય</td>
+      <td style="text-align: center"><a href="/stories/gu/0049_મેઘધનુષ્ય.html">HTML</a> · <a href="/stories/gu/0049_મેઘધનુષ્ય_slides.html" target="_blank">Slideshow</a></td>
+      <td><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/mkjvoww0h3zotvc/gu.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE">Google Drive</a></td>
+      <td><a name="gu0049"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0127</td>
       <td>વિવિધ નાતકો</td>
       <td style="text-align: center"><a href="/stories/gu/0127_વિવિધ-નાતકો.html">HTML</a> · <a href="/stories/gu/0127_વિવિધ-નાતકો_slides.html" target="_blank">Slideshow</a></td>
       <td><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/mkjvoww0h3zotvc/gu.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE">Google Drive</a></td>
       <td><a name="gu0127"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0130</td>
+      <td>મારા દાદી</td>
+      <td style="text-align: center"><a href="/stories/gu/0130_મારા-દાદી.html">HTML</a> · <a href="/stories/gu/0130_મારા-દાદી_slides.html" target="_blank">Slideshow</a></td>
+      <td><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/mkjvoww0h3zotvc/gu.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE">Google Drive</a></td>
+      <td><a name="gu0130"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0192</td>
+      <td>આશા એક મગફળિ-મખન નું સેંડવિચ છે.</td>
+      <td style="text-align: center"><a href="/stories/gu/0192_આશા-એક-મગફળિ-મખન-નું-સેંડવિચ-છે.html">HTML</a> · <a href="/stories/gu/0192_આશા-એક-મગફળિ-મખન-નું-સેંડવિચ-છે_slides.html" target="_blank">Slideshow</a></td>
+      <td><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/mkjvoww0h3zotvc/gu.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE">Google Drive</a></td>
+      <td><a name="gu0192"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
       <td>0253</td>
@@ -1758,7 +1779,7 @@
       <td>0049</td>
       <td><a href="http://my.africanstorybook.org/stories/rainbow">The Rainbow</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#fa0049">fa</a>, <a href="#yue0049">yue</a>, <a href="#zh0049">zh</a></td>
+      <td><a href="#fa0049">fa</a>, <a href="#gu0049">gu</a>, <a href="#yue0049">yue</a>, <a href="#zh0049">zh</a></td>
     </tr>
     <tr>
       <td>0053</td>
@@ -1872,7 +1893,7 @@
       <td>0130</td>
       <td><a href="http://my.africanstorybook.org/stories/my-grandma">My grandma</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#fa0130">fa</a>, <a href="#zh0130">zh</a></td>
+      <td><a href="#fa0130">fa</a>, <a href="#gu0130">gu</a>, <a href="#zh0130">zh</a></td>
     </tr>
     <tr>
       <td>0134</td>
@@ -1902,7 +1923,7 @@
       <td>0192</td>
       <td><a href="http://my.africanstorybook.org/stories/hope-peanut-butter-sandwich">Hope is a Peanut Butter Sandwich</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#fa0192">fa</a>, <a href="#yue0192">yue</a>, <a href="#zh0192">zh</a></td>
+      <td><a href="#fa0192">fa</a>, <a href="#gu0192">gu</a>, <a href="#yue0192">yue</a>, <a href="#zh0192">zh</a></td>
     </tr>
     <tr>
       <td>0199</td>
