+new stories (gu)

--- a/stories/index.html
+++ b/stories/index.html
@@ -953,6 +953,13 @@
       <td><a name="gu0049"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0093</td>
+      <td>મારો બાબ્લો</td>
+      <td style="text-align: center"><a href="/stories/gu/0093_મારો-બાબ્લો.html">HTML</a> · <a href="/stories/gu/0093_મારો-બાબ્લો_slides.html" target="_blank">Slideshow</a></td>
+      <td><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/mkjvoww0h3zotvc/gu.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE">Google Drive</a></td>
+      <td><a name="gu0093"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0127</td>
       <td>વિવિધ નાતકો</td>
       <td style="text-align: center"><a href="/stories/gu/0127_વિવિધ-નાતકો.html">HTML</a> · <a href="/stories/gu/0127_વિવિધ-નાતકો_slides.html" target="_blank">Slideshow</a></td>
@@ -979,6 +986,13 @@
       <td style="text-align: center"><a href="/stories/gu/0253_મારી-ચિત્ર-કિતાબ-.html">HTML</a> · <a href="/stories/gu/0253_મારી-ચિત્ર-કિતાબ-_slides.html" target="_blank">Slideshow</a></td>
       <td><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/mkjvoww0h3zotvc/gu.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE">Google Drive</a></td>
       <td><a name="gu0253"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0302</td>
+      <td>આગ</td>
+      <td style="text-align: center"><a href="/stories/gu/0302_આગ.html">HTML</a> · <a href="/stories/gu/0302_આગ_slides.html" target="_blank">Slideshow</a></td>
+      <td><img src="https://cloud.githubusercontent.com/assets/9295750/10150606/3f5ae2dc-65f5-11e5-8f63-841c51cc1cde.png" alt="" /> <a href="https://www.dropbox.com/s/mkjvoww0h3zotvc/gu.zip">Dropbox</a> · <img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="" /> <a href="https://drive.google.com/open?id=0B59ZADK9EsbsSVhWRWVwdUdpaEE">Google Drive</a></td>
+      <td><a name="gu0302"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -1839,7 +1853,7 @@
       <td>0093</td>
       <td><a href="http://my.africanstorybook.org/stories/my-baby-boy">My baby boy</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#fa0093">fa</a>, <a href="#yue0093">yue</a>, <a href="#zh0093">zh</a></td>
+      <td><a href="#fa0093">fa</a>, <a href="#gu0093">gu</a>, <a href="#yue0093">yue</a>, <a href="#zh0093">zh</a></td>
     </tr>
     <tr>
       <td>0095</td>
@@ -2019,7 +2033,7 @@
       <td>0302</td>
       <td><a href="http://my.africanstorybook.org/stories/fire">Fire</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#eo0302">eo</a>, <a href="#fa0302">fa</a>, <a href="#no0302">no</a>, <a href="#zh0302">zh</a></td>
+      <td><a href="#eo0302">eo</a>, <a href="#fa0302">fa</a>, <a href="#gu0302">gu</a>, <a href="#no0302">no</a>, <a href="#zh0302">zh</a></td>
     </tr>
     <tr>
       <td>0306</td>
